# offerops

./: .gitignore  AGENTS.md  CONTEXT.md  README.md  pyproject.toml
.github/: labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  docs.yml  feature_slice.yml
.github/workflows/: python-tests.yml
docs/: AGENT_FALLBACK.md  GITHUB_PROJECT_SETUP.md  MVP_ISSUES.md  ONBOARDING.md  REPORT_EXAMPLES.md  SPRINT_ROADMAP.md  WORKDAY_READ_ONLY_SAFETY.md  WORKFLOW.md
scripts/: browser_demo_router.py  greenhouse_browser_fill_demo.py  lever_browser_fill_demo.py  run_browser_demo.sh  run_greenhouse_demo.sh  run_lever_demo.sh
src/offerops/: __init__.py  cli.py  metadata.py  models.py  parser.py
tests/: test_adapters.py  test_agent_review_plan.py  test_browser_demo_router.py  test_greenhouse_browser_fill_demo.py  test_lever_browser_fill_demo.py  test_metadata_extraction.py  test_models.py  test_provider_detection.py  test_report_examples.py  test_workday_allowed_next_actions.py  test_workday_stage_detector.py  test_workday_stage_report_fixtures.py
tests/fixtures/: applicant_profile.json  ashby.html  browser_applicant_profile.json  fake_cover_letter.txt  fake_resume.txt  greenhouse.html  greenhouse_application.html  lever.html  missing_field_review_plan.json  oracle_cloud_hcm.html  unknown.html  workday.html  workday_stage_account_gate.html  workday_stage_application_questions.html  workday_stage_my_experience.html  workday_stage_my_information.html  workday_stage_report_account_gate.json  workday_stage_report_application_questions.json  (+8 more)
(+12 files in other folders)
