[project]
name = "offerops"
version = "0.1.0"
description = "Human-in-the-loop job application workflow assistant"
requires-python = ">=3.11"

[project.scripts]
offerops = "offerops.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
